Nuevas entidades y servicios

--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/DeleteMecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/DeleteMecanico.cshtml
@@ -8,6 +8,6 @@
    <h5>Esta seguro que deseaborrar a @Model.Mecanico.Nombre</h5>
     <form method="post">
       <button type="submit" class="btn btn-danger">Si</button>
-      <a class="btn btn-primary" asp-page ="/Mechanic/ListMecanicos">No</a>
+      <a class="btn btn-primary" asp-page ="/Administracion/Mechanic/ListMecanicos">No</a>
     </form>
 </div>
