--- a/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
@@ -24,12 +24,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
+@*                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Services/Services">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Mechanic/Administrador">Administrador</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Administracion/Administrador">Administrador</a>
                         </li>
+
+
                     </ul>
                 </div>
             </div>
