--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/EditMecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/EditMecanico.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <h2>Edición Personal @Model.Mecanico.Nombre</h2>
-<a class="btn btn-primary" asp-page ="/Mechanic/ListMecanicos">Lista</a>
+<a class="btn btn-primary" asp-page ="/Administracion/Mechanic/ListMecanicos">Lista</a>
 
 <form method="post">
     <input type = "hidden" asp-for ="Mecanico.IdMecanico"/>
