--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/Mecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/Mecanico.cshtml
@@ -9,6 +9,8 @@
 <form method="post" id = "adminAgregarmecanico" class="mt-5 mb-3 formuadmin"  >
  <h2>Agregando profesional </h2>
 
+  <a asp-page="/Administracion/Administrador" class="btn-defaoult">Volver</a>
+
     <div class="formularioc">
         <div class="mt-5 mb-3">
             <label for="nombre" class="form-label">Nombre</label>
