--- a/MecanicoConfiable.App.Servicios/Pages/Services/Services.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Services.cshtml
@@ -17,7 +17,7 @@
                          <div class="card-footer">
                        <a class="btn btn-primary "  asp-page="@servi.Link" 
                        rel="noopener noreferrer">Agregar</a>
-                       <a class="btn btn-primary "  asp-page="/Mechanic/ListMecanicos" 
+                       <a class="btn btn-primary "  asp-page="@servi.LinkList" 
                        rel="noopener noreferrer">Listado</a>
                         </div> 
 
