--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/DeleteMecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/DeleteMecanico.cshtml
@@ -4,6 +4,8 @@
 }
 <h1>Borrado de confirmación</h1>
 
+<a class="btn btn-primary" asp-page ="/Administracion/Mechanic/ListMecanicos">Lista</a>
+
 <div class="alet alet-danger">
    <h5>Esta seguro que deseaborrar a @Model.Mecanico.Nombre</h5>
     <form method="post">
