Cambios en entidad Vehiculo

--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
@@ -39,6 +39,8 @@
               <a class="btn btn-primary table-btn" asp-page="./EditVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Editar</a>
               <a class="btn btn-primary table-btn" asp-page="./DeleteVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Detalle</a>
+              <a class="btn btn-primary table-btn" asp-page="./AddMecanico" asp-route-Placa = "@vehiculo.Placa">Asignar Mecanico</a>
+
 
             </td>
 
