--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/DetailVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/DetailVehiculo.cshtml
@@ -84,5 +84,14 @@
         <td>@Model.Vehiculo.Dueño</td>
     </tr>
 
+    <thead>
+      <tr>
+        <th>Mecanico</th>
+      </tr>
+    </thead>
+    <tr>
+        <td>@Model.Vehiculo.IdMecanico</td>
+    </tr>
+
 
 </table>
