--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Administrador.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Administrador.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Administrador";
 }
-
-
+@* <link rel="stylesheet" href="~/css/EstiloGeneral.css" asp-append-version="true" />
+ *@
     <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             @foreach (var personal in Model.TPersonal)
