--- a/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MecanicoConfiable.App.Servicios</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MecanicoConfiable.App.Servicios.styles.css" asp-append-version="true" />
+     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+     <link rel="stylesheet" href="~/MecanicoConfiable.App.Servicios.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/_Administrador.css" asp-append-version="true" />
+@*     <link rel="stylesheet" href="~/css/EstiloGeneral.css" asp-append-version="true" />
+ *@
 
 </head>
 <body>
@@ -33,6 +35,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Administracion/Administrador">Administrador</a>
                         </li>
+
 
 
                     </ul>
