--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/AddMecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/AddMecanico.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>Agregando Mecanico  @Model.Vehiculo.Placa  </h2>
 
-<a class="btn btn-primary" asp-page ="/Services/Car/ListVehiculo">Volver a</a>
+<a class="btn btn-primary" asp-page ="/Services/Car/ListVehiculo">Volver</a>
 
 <form method="post">
     <input type = "hidden" asp-for ="Vehiculo.Placa"/>
