--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/DetailVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/DetailVehiculo.cshtml
@@ -90,7 +90,7 @@
       </tr>
     </thead>
     <tr>
-        <td>@Model.Vehiculo.IdMecanico</td>
+        <td>@Model.Mecanico.Nombre</td>
     </tr>
 
 
