--- a/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,10 @@
      <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
      <link rel="stylesheet" href="~/MecanicoConfiable.App.Servicios.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/_Administrador.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+
 @*     <link rel="stylesheet" href="~/css/EstiloGeneral.css" asp-append-version="true" />
+
  *@
 
 </head>
