--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/DetailVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/DetailVehiculo.cshtml
@@ -81,7 +81,7 @@
       </tr>
     </thead>
     <tr>
-        <td>@Model.Vehiculo.Dueño</td>
+        <td>@Model.Dueño.Nombre</td>
     </tr>
 
     <thead>
