--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
@@ -40,6 +40,7 @@
               <a class="btn btn-primary table-btn" asp-page="./DeleteVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Eliminar</a>
               <a class="btn btn-primary table-btn" asp-page="./DetailVehiculo" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Detalle</a>
               <a class="btn btn-primary table-btn" asp-page="./AddMecanico" asp-route-Placa = "@vehiculo.Placa">Asignar Mecanico</a>
+              <a class="btn btn-primary table-btn" asp-page="./AddDueño" asp-route-Placa = "@vehiculo.Placa">Asignar Mecanico</a>
 
 
             </td>
