--- a/MecanicoConfiable.App.Servicios/Pages/Services/Levels/EditNiveles.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Levels/EditNiveles.cshtml
@@ -26,8 +26,13 @@
         <input asp-for = "Niveles.NivelLiquidDireccion" class="form-control">
     </div>
     <div class="form-group">
-        <label asp-for ="Niveles.IdVehiculo"></label>
-        <input asp-for = "Niveles.IdVehiculo" class="form-control">
+        <label for="descripcion" class="form-label">Placa</label>
+            <select asp-for="Niveles.IdVehiculo" class="form-control">                
+             @foreach (var vehiculo in Model.Vehiculo)
+            {                
+                <option value="@vehiculo.IdVehiculo">@vehiculo.Placa</option>            
+            }
+            </select>
     </div>
       <div class="form-group">
         <label asp-for ="Niveles.FechaHora"></label>
