Division de cargos y funciones

--- a/MecanicoConfiable.App.Servicios/Pages/Services/Parts/Repuestos.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Parts/Repuestos.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post" id = "adminAgregarmecanico" class="mt-5 mb-3 formuadmin"  >
  <h2>Agregando Repuesto </h2>
- <a asp-page="/Administracion/Administrador" class="btn-defaoult">Volver</a>
+<a class="btn btn-primary" asp-page ="/Services/ServicesTec">Volver</a>
 
     <div class="formularioc">
         <div class="mt-5 mb-3">
