--- a/MecanicoConfiable.App.Servicios/Pages/Services/VehiculosAsignados/ListMechanics.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/VehiculosAsignados/ListMechanics.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Mecanicos contratados actualmente</h1>
 
- <a asp-page="/Services/Services" class="btn-defaoult">Volver</a>
+ <a asp-page="/Services/ServicesTec" class="btn-defaoult">Volver</a>
 
 <table class="table mt-5 mb-3">
 
