--- a/MecanicoConfiable.App.Servicios/Pages/Services/Levels/Niveles.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Levels/Niveles.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post" id = "adminAgregarmecanico" class="mt-5 mb-3 formuadmin"  >
  <h2>Registro de Niveles </h2>
- <a asp-page="/Services/Services" class="btn-defaoult">Volver</a>
+ <a asp-page="/Services/ServicesTec" class="btn-defaoult">Volver</a>
 
     <div class="formularioc">
         <div class="mb-3">
