--- a/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Services/Services">Servicios</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Services/ServicesTec">Servicios técnicos</a>
+                        </li>
+                        
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Administracion/Administrador">Administrador</a>
                         </li>
                     </ul>
