--- a/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Car/ListVehiculo.cshtml
@@ -42,6 +42,7 @@
               <a class="btn btn-primary table-btn" asp-page="./AddMecanico" asp-route-Placa = "@vehiculo.Placa">Asignar Mecanico</a>
               <a class="btn btn-primary table-btn" asp-page="./AddSeguro" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Comprar Seguro</a>
               <a class="btn btn-primary table-btn" asp-page="./AddDueño" asp-route-Placa = "@vehiculo.Placa">Asignar Dueño</a>
+              <a class="btn btn-primary table-btn" asp-page="./AddChangeParts" asp-route-IdVehiculo = "@vehiculo.IdVehiculo">Cambio Repuestos</a>
 
 
             </td>
