Algunos cambios front

--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/Mecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/Mecanico.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<form method="post" id = "adminAgregarmecanico" class="mt-5 mb-3 formuadmin"  >
+<form method="post" id = "formuadmin" class="mt-5 mb-3 formuadmin"  >
  <h2>Agregando profesional </h2>
 
   <a asp-page="/Administracion/Administrador" class="btn-defaoult">Volver</a>
