--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Owner/DetailDueño.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Owner/DetailDueño.cshtml
@@ -3,10 +3,10 @@
 
 @{
 }
-<h2>Detalle de Vehiculo Placa: @Model.Dueño.Nombre</h2>
+<h2>Detalle del dueño @Model.Dueño.Nombre</h2>
 <a class="btn-defaoult" asp-page ="./ListDueño">Volver</a>
 
-<table class="table mt-5 mb-3"> 
+<table class="table mt-5 mb-3"   > 
     <thead>
       <tr>
         <th>ID</th>
