--- a/MecanicoConfiable.App.Servicios/Pages/Services/Levels/EditNiveles.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Levels/EditNiveles.cshtml
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary" asp-page ="/Services/Levels/ListNiveles">Volver</a>
 
-<form method="post">
+<form method="post" id = "formuadmin" class="mt-5 mb-3 formuadmin" >
     <input type = "hidden" asp-for ="Niveles.IdNiveles"/>
     <div class="form-group">
         <label asp-for ="Niveles.NivelAceite"></label>
