--- a/MecanicoConfiable.App.Servicios/Pages/Services/Levels/ListNiveles.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Levels/ListNiveles.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>  Revisiones de niveles Hechas</h1>
-<a asp-page="/Services/Services" class="btn-defaoult">Volver</a>
+<a asp-page="/Services/ServicesTec" class="btn-defaoult">Volver</a>
 <table class="table mt-5 mb-3">
 
     <thead>
