--- a/MecanicoConfiable.App.Servicios/wwwroot/css/_Administrador.css
+++ b/MecanicoConfiable.App.Servicios/wwwroot/css/_Administrador.css
@@ -4,3 +4,10 @@
     margin: 0 0 0 11px;
     
   }
+.formuadmin{
+    width: 30%;
+  }
+#Colorcentral{
+    background-color: #e0dede;/* fonda header */
+}
+
