--- a/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/EditMecanico.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Administracion/Mechanic/EditMecanico.cshtml
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary" asp-page ="/Administracion/Mechanic/ListMecanicos">Volver</a>
 
-<form method="post">
+<form method="post" id = "formuadmin" class="mt-5 mb-3 formuadmin"  >
     <input type = "hidden" asp-for ="Mecanico.IdMecanico"/>
     <div class="form-group">
         <label asp-for ="Mecanico.Nombre"></label>
