--- a/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml.css
+++ b/MecanicoConfiable.App.Servicios/Pages/Shared/_Layout.cshtml.css
@@ -5,11 +5,14 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  color: #0077cc;
+
 }
 
 a {
   color: #0077cc;
 }
+
 
 .btn-primary {
   color: #fff;
@@ -18,7 +21,7 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
+  color: black;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
