--- a/MecanicoConfiable.App.Servicios/Pages/Services/Levels/ListNiveles.cshtml
+++ b/MecanicoConfiable.App.Servicios/Pages/Services/Levels/ListNiveles.cshtml
@@ -36,7 +36,7 @@
             <td>
               <a class="btn btn-primary table-btn" asp-page="./EditNiveles" asp-route-IdNiveles = "@nivel.IdNiveles">Editar</a>
               <a class="btn btn-primary table-btn" asp-page="./DeleteNiveles" asp-route-IdNiveles = "@nivel.IdNiveles">Eliminar</a>
-              <a class="btn btn-primary table-btn" asp-page="./DetailRevision" asp-route-IdVehiculo = "@nivel.IdVehiculo">Detalle</a>
+              <a class="btn btn-primary table-btn" asp-page="./DetailRevision" asp-route-IdNiveles = "@nivel.IdNiveles">Detalle</a>
             </td>
 
         </tr>
